--- a/ui/package.json
+++ b/ui/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^7.0.2"
+    "react-router": "^7.0.2",
+    "react-signalr": "^0.2.24"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
